Fixing alignment issues, clean up CSS

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* document */
+
 body {
 	margin: 0;
 	font-family: Montserrat, sans-serif;
@@ -10,26 +12,22 @@ body {
 	text-decoration: none;
 }
 
-.about {
+/* page-specific */
+
+.about-bg {
 	background: #b6c1c2;
-	color: #000000;
 	}
 
-.work {
-	/* background-color: #141517; */
-	color: #ffffff;
+.work-bg {
+	background-color: #141517;
 }
 
-.main-grid {
-	/* display: grid; */
-	/* grid-template-areas: */
-		/* 'menu content'; */
-	grid-template-columns: auto 1fr;
-	/* padding: 8px; */
-	/* width: 100vw; */
-	/* max-width: 100%; */
-	/* height: 100vh; */
-	grid-gap: 20px;
+.about-text {
+	color: rgba(0, 0, 0, 1.0);
+}
+
+.work-text {
+	color: rgba(255, 255, 255, 1.0);
 }
 
 /* menu */
@@ -41,18 +39,14 @@ body {
 	width: 160px;
 	height: 100vh;
 	padding: 8px;
-	/* max-height: 100%; */
-	/* border: 1px solid yellow; */
 	z-index: 5;
 }
 
-.menu>div {}
-
-h1 {
-	display: none;
+.menu-background {
+	z-index: 1;
 }
 
-#abbreviation {
+h1 {
 	display: none;
 }
 
@@ -69,31 +63,61 @@ h1 {
 	margin: 0;
 	font-family: "Source Code Pro", monospace;
 	font-weight: 900;
-	/* font-size: 0.5em; */
-	/* text-shadow: 1px 1px #0000AA; */
 }
 
 nav {
-	margin: 0;
 	font-weight: 300;
 	text-transform: uppercase;
-	font-size: 1em;
+	font-size: 1.5em;
 }
+
+ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+/* content */
+
+.main-grid {
+	display: grid;
+	grid-template-columns: 100%;
+	/* padding: 8px; */
+}
+
+.content-top {
+	/* height: 100vh; */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	/* margin: 0px; */
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 0px;
+}
+
+article, .container-video {
+	margin: 0px 8px 0px 180px;
+}
+
+/* links */
 
 a {
 	background: linear-gradient(to right, #30CFFF 0%, #FF0867 25%, #30CFFF 50%, #FF0867 75%, #30CFFF 100%);
 	background-size: 400% 400%;
 	background-clip: text;
-	color: #000;
 	text-decoration: underline;
-	color: rgba(0, 0, 0, 1.);
 	transition: color 2s;
+	color: inherit;
 	animation: grad1 20s linear infinite;
 }
 
 li>a {
 	text-decoration: none;
-	/* color: rgba(0, 0, 0, 1.); */
 }
 
 li>a.work {
@@ -105,74 +129,55 @@ a:hover {
 	color: rgba(0, 0, 0, 0.2);
 }
 
-ul {
-	/* display: inline-block; */
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-
-.content {
-	display: flex;
-	height: 100vh;
-	flex-direction: column;
-	justify-content: center;
-	/* padding: 0px 20px 0px 180px; */
-	margin: 0px;
-}
-
-.content>p, .container-text, .container-video {
-	margin: 8px 20px 8px 180px;
-}
 /* ascii art */
 
 .ascii {
-	font-size: calc((100vw - 200px) * 0.02);
+	font-size: calc((100vw - 196px) * 0.02);
 	line-height:1;
-	padding: 0px 20px 0px 180px;
+	padding: 0px 8px 0px 180px;
+	/* position: static; */
 }
 
-#ascii-1 {
+#ascii-frontpage-1 {
 	transform: rotate(1deg);
 	position: absolute;
 	background: linear-gradient(30deg, #30CFFF 0%, #FF0867 25%, #30CFFF 50%, #FF0867 75%, #30CFFF 100%);
 	background-size: 400% 400%;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-	animation: grad1 200s linear infinite;
-	/* animation-play-state: running; */
+	animation: frontpage-gradient 200s linear infinite;
 }
 
-#ascii-2 {
+#ascii-frontpage-2 {
 	transform: rotate(-1deg);
+	position: absolute;
 	background: linear-gradient(160deg, #FF0867 0%, #30CFFF 25%, #FF0867 50%, #30CFFF 75%, #FF0867 100%);
 	background-size: 400% 400%;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-	animation: grad1 200s linear infinite;
-	/* animation-play-state: running; */
+	animation: frontpage-gradient 200s linear infinite;
 }
 
-@keyframes grad1 {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
+#ascii-frontpage-3 {
+	color: rgba(0, 0, 0, 0.0);
+}
+
+@keyframes frontpage-gradient {
+	0%{background-position:0% 50%}
+	50%{background-position:100% 50%}
+	100%{background-position:0% 50%}
 }
 
 /* videos */
 
-	.video-insert {
-		position: absolute; 
-		right: 0; 
-		bottom: 0;
-		/* min-width: 100%; 
-		min-height: 100vh;
-		width: 100%; 
-		height: auto;  */
-		z-index: 2;
-		/* background-size: cover; */
-		overflow: hidden;
-	}
+.video-insert {
+	position: absolute; 
+	right: 0; 
+	bottom: 0;
+	height: auto;
+	z-index: 2;
+	overflow: hidden;
+}
 
 .project-title {
 	color: #fff;
@@ -184,59 +189,53 @@ ul {
 	z-index: 3;
 }
 
-
-	.container {
-		background-color: #141517;
-		display: grid;
-		position: absolute;
-		top: 100vh;
-		grid-template-columns: 1fr;
-		grid-gap: 10px;
-		max-width: 100vw;
-		z-index: -1;
-	}
+.container {
+	display: grid;
+	/* position: absolute; */
+	/* top: 100vh; */
+	padding: 100vh 0px 0px 0px;
+	grid-template-columns: 1fr;
+	grid-gap: 10px;
+	max-width: 100vw;
+	/* z-index: -1; */
+}
 
 .container-video {
-  overflow: hidden;
-  padding-top: 56.25%;
-  position: relative;
+	overflow: hidden;
+	padding-top: 56.25%;
+	position: relative;
 }
  
 .container-video iframe {
-   border: 0;
-   height: 100%;
-   left: 0;
-   position: absolute;
-   top: 0;
-   right:20px;
-   width: 100%;
+	border: 0;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	right:20px;
+	width: 100%;
 }
 /* mobile */
 
 @media (max-width: 700px) {
 	.main-grid {
-		grid-template-areas:
-			'menu'
-			'content';
-			grid-template-rows: auto 1fr;
-			grid-template-columns: auto;
+			grid-template-columns: 100%;
 			grid-gap: 10px;
 	}
 
 	.menu {
 		width: 100%;
-		height: 10vw;
+		height: auto;
 		flex-direction: row;
 		justify-content: flex-start;
 		white-space: nowrap;
 	}
+
 	.menu-background {
 		position: fixed;
 		width: 100%;
 		height: 10vw;
-		/* padding: 8px; */
 		background-color: #141517;
-		z-index: 1;
 	}
 
 	h1 {
@@ -268,19 +267,28 @@ ul {
 	}
 
 	.ascii {
-		font-size: calc((100vw - 40px) * 0.02);
-		padding: 10vw 20px 0 20px;
+		font-size: calc((100vw - 16px) * 0.02);
+		/* margin: 20vw 0px 0px 0px; */
+		/* padding: 0px */;
+		padding: 10vw 8px 0px 8px;
 	}
+
 	.ascii-header {
 		display: inline-block;
 	}
 
-	.content {
+	.content-top {
 		justify-content: flex-start;
 	}
 	
-	.content>p, .container-text, .container-video {
-		margin: 8px 20px 8px 20px;;
+	article {
+		margin: 0;
+		padding: 8px;
+	}
+
+	.container-video {
+		padding-top: 56.25%;
+		margin: 0px 8px 8px 8px;
 	}
 
 	li {
